<resources>
    <string name="app_name">oopsiesMeasurement</string>
    <string name="educational_button">Educational</string>
    <string name="fun_facts_button">Fun Facts</string>
    <string name="settings_button">Settings</string>
    <string name="phenomena_and_illusions_button">Phenomena and Illusions</string>
    <string name="length_mass_and_time_button">Length, mass and time</string>
    <string name="estimating_quantities_button">Estimating Quantities</string>
    <string name="heat_and_temperature_button">Heat and Temperature</string>
    <string name="phenomena_illusions_title">Phenomena and Illusions</string>
    <string name="phenomena_illusions_content">
        Part 1: Introduction\n\n
        Physics is the scientific study of how matter and energy interact. These interactions can
        produce the colours of the rainbow in a shower or the roar of the wind in a hurricane. At a
        greater distance, the interactions of matter and energy in the Sun produce light and heat,
        while inside our eyes light energy is converted into electrical energy, which passes to our
        brain and allows us to see.\n

        Every event in the universe, from your next breath to a star exploding, is an interaction of
        matter and energy, so physics is really a part of all the other scientific
        subjects rather than a separate one.\n

        All the information we gather with our senses, such as the presence of light, and events,
        such as the formation of a rainbow, are called phenomena. So,
        physics can also be described as the science of investigating phenomena.\n\n

        Part 2: Launching a Rocket\n\n
        Light from the engines of a rocket can be seen immediately by the distance spectators as the
        rocket begins to rise from the launch pad. The speed increases every second as it went up
        high into the sky. The rocket is divided into parts called stages. Every stage has a
        fuel tank and rocket engines. When fuel in a stage is used up, the rocked will then detach
        from the others, hence enables the next stage to use its rocket engines and fuel, to propel
        the rocket further more into the sky. After all stages are completed, only one small stage
        is left, which is where the cockpit is located. Thus, it is left orbiting around the Earth
        in space or set off across the Solar System.\n\n

        Part 3: Illusions\n\n
        Occasionally what we detect with our senses fools us into thinking we are seeing something
        else. When this happens, we are usually fooled by an optical illusion.\n
        All our senses can be fooled into seeming to detect something that is not really present.
        This means that, instead of relying on you senses, we need to make more accurate observations
        of phenomena in science. We do this by taking measurements.\n\n

        Part 4: Q and A\n\n
        1. Why was the light from the rocket engine is seen first before the sound of blast?\n
        Answer: Because light is faster than sound.\n\n
        2. Why are the stages fall back to Earth when they are detached from the rocket?\n
        Answer: Because gravity pulls the stages of the rocket from the sky as they have not
        escaped the atmosphere and gravitational pull.\n\n
        3. Why did the stages burn up in the atmosphere?\n
        Answer: It is due to the high level of O2. The stages are slowly burn to ashes as its increase
        decent onto the ground.
    </string>
    <string name="length_mass_time_title">Length, Mass and Time</string>
    <string name="length_mass_time_content">
        Part 1: Introduction\n\n
        Three thing that are measured in many investigations are length, mass, and time. Any measurement
        is made in units. For example, a common unit of length is the centimetre. There is an
        international system of units that is used by scientist throughout the world. This is known
        as the SI units.\n\n

        Part 2: Measuring Length\n\n
        The standard SI unit of length is metre. Its symbol is m, and as with all symbols for SI units,
        no full stop is placed after it. Metre is divided into smaller units for measuring all small
        lengths or distances, and large numbers of metres are made into bigger units to measure long
        lengths or distances.\n
        For example, 1 kilometre is 1000 m; 1 centimetre is 0.01 m; 1 millimetre is 0.001 m and so
        on.\n\n

        Part 2: Measuring Mass\n\n
        The standard SI unit of mass is kilogram with the symbol kg. The other units of mass used in
        investigations are megatonne, tonne, gram, milligram and so on. For example, 1 megatonne
        equals to 1,000,000,000 kg; 1 tonne equals to 1000 kg; 1 gram equals to 0.001 kg, and
        1 milligram equals to 0.000001 kg.\n\n

        Part 3: Measuring Time\n\n
        The standard SI unit of time is second with the symbol s. Other units includes day, hour, minute,
        second, millisecond, and more. For example, 1 day is 86,400 seconds, or 1,400 minutes, or 24
        hours; 1 hour is 3,600 seconds or 60 minutes; 1 millisecond is 0.001 second and so on.
    </string>
    <string name="estimating_quantities_title">Estimating Quantities</string>
    <string name="estimating_quantities_content">
        Part 1: Introduction\n\n
        At the beginning of an investigation, it may be useful to estimate the quantities that are
        going to be used or the time that is going to be taken for certain observations. At this
        stage of the investigation, accuracy is not essential just yet.\n\n

        Part 2: Accuracy of Measurements\n\n
        Your accuracy when making a measurement depends on the measuring instrument, as of how well it has
        been made and calibrated compared with the standard, and how well the scale on the instrument
        has been constructed. A stopwatch that only measures time by seconds cannot be used to time
        events to a tenth of a second.\n\n
        Your accuracy also depends on how well you use the measuring instrument. Care in setting up
        the device is needed. For example, you must place a ruler accurately when measuring length,
        reset a stopwatch before repeating a timing and make sure that a balance is set at zero before
        a mass is put on it. If a balance is used with a scale that is read by looking at the position
        of a pointer, your eye should be placed directly in front of the pointer.\n\n
        More examples for the accuracy of measurements are eyes - approximation, very inaccurate,
        improve by experience, although still inaccurate, body limb - approximation, inaccurate as
        there are too many variables, ruler - accurate, although there are limits to the sizes of the
        ruler, therefore there are different length of rulers, and measuring tape - accurate, can measure
        length longer than ruler.
    </string>
    <string name="heat_temp_title">Heat and Temperature</string>
    <string name="heat_temp_content">
        Part 1: Introduction\n\n
        The hotness or coldness of a substance is measured by taking its temperature. The temperature
        of a substance is measured on a scale that has two fixed points. The most widely used temperature
        scale is the Celsius scale. Its two fixed points are 0 degree Celsius which is the melting point of
        ice or freezing point of water, and 100 degree Celsius which is the boiling point of water. In between
        the two fixed points, the scale is divided into 100 units or degrees. The scale may be extended
        below 0 degree Celsius and above 100 degree Celsius; laboratory thermometers are usually has
        a scale reading from -10 degree Celsius to 110 degree Celsius.\n\n

        A thermometer compares the temperature of the substance in which the bulb is immersed with
        the freezing point and boiling point of water. It compares the hotness or coldness of a substance.
        \n\n

        The lowest possible temperature, known as absolute zero, is -273 degree Celsius. Temperatures
        can go as high as millions of degrees Celsius.\n\n

        Part 2: Liquids in thermometers\n\n
        Two liquids that are commonly used in thermometers are mercury and alcohol. Mercury has a
        freezing point of -39 degree Celsius and a boiling point of 360 degree Celsius while alcohol
        has a freezing point of -112 degree Celsius and a boiling point of 78 degree Celsius.\n\n

        If the bulb of the thermometer is placed in a hot substance, the liquid inside expands and
        spreads up inside the thermometer tube. The level it reaches depends on the hotness of the
        substance, and hte temperature can be read from the scale. If the bulb is then placed in a
        cold substance, the liquid inside contracts back down the tube. The level at which it settles
        depends on the coldness, and again the temperature is read from the scale.
    </string>
    <string name="fun_facts_title">Fun facts</string>
    <string name="about_us_appTitle">OOPsies\nMeasurement\nProject</string>
    <string name="about_us_textView0">A group of student\'s attempt on creating an app</string>
    <string name="about_us_textView2">Our Team</string>
    <string name="about_us_textView3">Daryl Kardil Kelabit</string>
    <string name="about_us_textView4">Adrian Lau Hui Yi</string>
    <string name="about_us_textView5">Abdullah Al-Hisyam</string>
    <string name="about_us">About Us</string>
    <string name="feedback">Feedback</string>
    <string name="source_code">Source Code</string>
    <string name="textView1">We would like to hear your valuable suggestions. Please fill in the feedback form in the settings page.</string>
</resources>