<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/edu_background"
    tools:context=".Educational">

    <Button
        android:id="@+id/button3"
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="34dp"
        android:layout_marginTop="55dp"
        android:layout_marginEnd="34dp"
        android:background="@drawable/button_background"
        android:text="@string/phenomena_and_illusions_button"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:typeface="serif" />

    <Button
        android:id="@+id/button4"
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="34dp"
        android:layout_marginTop="192dp"
        android:layout_marginEnd="34dp"
        android:background="@drawable/button_background"
        android:gravity="center"
        android:text="@string/length_mass_and_time_button"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:typeface="serif" />

    <Button
        android:id="@+id/button5"
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="34dp"
        android:layout_marginTop="324dp"
        android:layout_marginEnd="34dp"
        android:background="@drawable/button_background"
        android:text="@string/estimating_quantities_button"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:typeface="serif" />

    <Button
        android:id="@+id/button6"
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="34dp"
        android:layout_marginTop="460dp"
        android:layout_marginEnd="34dp"
        android:background="@drawable/button_background"
        android:gravity="center"
        android:text="@string/heat_and_temperature_button"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:typeface="serif" />
</RelativeLayout>