<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_style1"
    tools:context=".Settings">

    <Button
        android:id="@+id/button0"
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:layout_marginStart="89dp"
        android:layout_marginTop="106dp"
        android:layout_marginEnd="89dp"
        android:text="@string/about_us"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:background="@drawable/button_style1"
        android:textSize="24sp"
        android:typeface="serif"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button1"
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:layout_marginStart="89dp"
        android:layout_marginTop="250dp"
        android:layout_marginEnd="89dp"
        android:text="@string/feedback"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:background="@drawable/button_style1"
        android:textSize="24sp"
        android:typeface="serif"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button0" />

    <Button
        android:id="@+id/button2"
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:layout_marginStart="89dp"
        android:layout_marginTop="400dp"
        android:layout_marginEnd="89dp"
        android:text="@string/source_code"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:background="@drawable/button_style1"
        android:textSize="24sp"
        android:typeface="serif"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button1" />

</RelativeLayout>